lang/c/include/vtfppc/VTF.h

typedef void* vtfpp_vtf_handle_t;
VTFPP_API int vtfpp_vtf_save_fallback_to_file(vtfpp_vtf_handle_t handle, const char* imagePath, uint8_t mip, uint16_t frame, uint8_t face, vtfpp_image_conversion_file_format_e fileFormat);
VTFPP_API uint8_t vtfpp_vtf_get_console_mip_scale(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_console_mip_scale(vtfpp_vtf_handle_t handle, uint8_t consoleMipScale);
VTFPP_API uint64_t vtfpp_vtf_estimate_bake_size(vtfpp_vtf_handle_t handle, int* isExact);
VTFPP_API sourcepp_buffer_t vtfpp_vtf_bake(vtfpp_vtf_handle_t handle); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API int vtfpp_vtf_bake_to_file(vtfpp_vtf_handle_t handle, const char* vtfPath);