lang/csharp/src/vtfpp/DLL.cs


	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_save_fallback_to_file(nint handle, string imagePath, byte mip, ushort frame, byte face, ImageConversion.FileFormat fileFormat);

	[LibraryImport(Name)]
	public static partial byte vtfpp_vtf_get_console_mip_scale(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_console_mip_scale(nint handle, byte consoleMipScale);

	[LibraryImport(Name)]
	public static partial ulong vtfpp_vtf_estimate_bake_size(nint handle, ref int isExact);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_vtf_bake(nint handle);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_bake_to_file(nint handle, string vtfPath);
}
